@@ -201,6 +201,7 @@ static GameDefs g = {
 	0,	// FULL_INVIS_ON_SELF
 	0,	// MONSTER_BATTLE_REGEN
 	0,	// SKILL_PRACTICE_AMOUNT
+	0, // REQUIRED_EXPERIENCE
 	0,	// UPKEEP_MINIMUM_FOOD
 	-1,	// UPKEEP_MAXIMUM_FOOD
 	10,	// UPKEEP_FOOD_VALUE
