@@ -927,5 +927,8 @@ Changes from 4.0.10 -> 5.0.0
    -- added an IsAlive() check to Unit::CanReallySwim() to prevent newly formed units from LEAVING
       a ship and then drowning during give.
    -- fixed bug where clear skies didn't affect sailing cost.
+   -- added REQUIRED_EXPERIENCE. Units have their study rate (in normal games always 30 days per
+      month no matter what) adjusted when they have significantly less or much more experience
+      than days of study.
    	  ToDo: armored galleon bonus...?
    
